--- a/style.css
+++ b/style.css
@@ -60,6 +60,8 @@ body.light-theme {
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    -webkit-tap-highlight-color: transparent;
+}
 }
 
 li {
